--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+:root {
+  --header-height: 80px;
 }
