--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -1,12 +1,13 @@
 #preview {
     display: flex;
-    justify-content: center;
     align-items: center;
     
-    box-shadow: 4px 4px 10px grey;
+    position: sticky;
+    top: 50px;
     
-    width: 30%;
-    height: 80%;
+    width: 800px;
+    min-height: 1000px;
+    height: 1000px;
     
     background-color: #fffffe;
     color: #fffffe;
@@ -21,9 +22,11 @@
     min-width: 200px;
     height: 100%;
     padding: 20px;
+    gap: 20px;
     
     background-color: #232946;
     box-sizing: border-box;
+    box-shadow: 4px 4px 10px grey;
     
     font-size: 12px;
 }
@@ -31,14 +34,20 @@
 #preview-right {
     display: flex;
     flex-direction: column;
-    align-items: center;
     
     box-sizing: border-box;
+    background-color: #fffffe;
+    box-shadow: 4px 4px 10px grey;
     
     width: 70%;
     min-width: 500px;
     height: 100%;
     padding: 20px;
+}
+
+#preview-details {
+    display: flex;
+    width: 100%;
 }
 
 #profile-picture {
@@ -54,41 +63,65 @@
     gap: 10px;
 }
 
-.preview-title {
-    font-size: 24px;
-    text-decoration: underline;
+#preview-contact img {
+    height: auto;
+    max-width: 24px;
 }
 
-.preview-wrapper {
+.preview-card {
     display: flex;
     flex-direction: column;
-    
-    width: 90%;
-}
-
-.preview-details-wrapper {
-    display: flex;
-    align-items: center;
     
     width: 100%;
     gap: 10px;
 }
 
-.preview-details-wrapper img {
-    grid-row: 1 / 3;
-    height: auto;
-    max-width: 24px;
-    align-self: center;
-}
-
-.preview-details-wrapper span {
-    margin: 0px;
-    padding: 0px;
-}
-
-.preview-details {
+.preview-card-title {
     display: flex;
     flex-direction: column;
+    
+    width: 100%;
+    
+    font-size: 24px;
+    text-decoration: underline;
+}
+
+.preview-card-slide {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+
+.preview-card-slide-vertical {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.preview-name {
+    font-size: 40px;
+}
+
+.preview-description {
+    border-bottom: 1px solid #232946;
+}
+
+.preview-name span:first-of-type {
+    font-weight: 500;
+}
+
+.preview-text {
+    color: #232946;
+    margin: 0;
+    
+    max-width: 100%;
+    overflow-wrap: break-word;
+}
+
+#preview-contact .preview-text {
+    color: #fffffe;
+    max-width: 80% !important;
 }
 
 #skills {
@@ -97,3 +130,4 @@
     
     width: 100%;
 }
+
