--- a/src/css/Content.css
+++ b/src/css/Content.css
@@ -1,10 +1,24 @@
 #content {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
     
+    padding-top: 50px;
+    
+    gap: 50px;
     width: 100%;
     height: calc(100% - var(--header-height));
+    height: 2000px;
     
     background-color: #d4d8f0;
+}
+
+@media only screen and (max-width: 1450px) {
+    #content {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    #editor {
+        width: 100%;
+    }
 }
