--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -138,6 +138,9 @@
 
 .preview-experience-list {
     display: flex;
+    flex-direction: column;
+    
+    gap: 20px;
     width: 100%;
     
     list-style: none;
