--- a/src/css/Content.css
+++ b/src/css/Content.css
@@ -3,11 +3,12 @@
     justify-content: center;
     
     padding-top: 50px;
+    padding-bottom: 50px;
     
     gap: 50px;
     width: 100%;
-    height: calc(100% - var(--header-height));
-    height: 2000px;
+    min-height: calc(100% - var(--header-height));
+    height: auto;
     
     background-color: #d4d8f0;
 }
