--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -4,6 +4,7 @@
     
     position: sticky;
     top: 50px;
+    overflow: hidden;
     
     width: 800px;
     min-height: 1000px;
@@ -25,6 +26,7 @@
     gap: 20px;
     
     background-color: #232946;
+    color: #fffffe;
     box-sizing: border-box;
     box-shadow: 4px 4px 10px grey;
     
